First upload, working on delete

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 			<a class="navbar-brand" href="{{ url_for('index') }}"><img src="/static/mini_logo.png" width="60"
 																	   alt="Home"></a>
 			<a class="navbar-brand" href="{{ url_for('info') }}">Info & boeken</a>
-			<a class="navbar-brand" href="{{ url_for('huisjes') }}">Beschikbaar & boeken</a>
+			<a class="navbar-brand" href="{{ url_for('huisjes') }}">Overzicht woningen</a>
 			<a class="navbar-brand" href="{{ url_for('back_home') }}">Login</a>
 		</div>
 	</nav>
