--- a/templates/be_overzicht.html
+++ b/templates/be_overzicht.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 	{% extends 'base_be.html' %}
-	<div class="container">
-		{% block content %}
+	{% block content %}
+		<div class="container">
+
 			<table class="table table-striped">
 				<tr>
 					{% for item in data.keys() %}
@@ -16,13 +17,13 @@
 				</tr>
 				{% for item in data %}
 					<tr>
-						{% for i in range(item|length) %}
-							<td>{{ item[i] }}</td>
+						{% for i in item %}
+							<td>{{ i }}</td>
 						{% endfor %}
 					</tr>
 				{% endfor %}
 			</table>
-			</div>
-		{% endblock %}
+		</div>
+	{% endblock %}
 </body>
 </html>
