--- a/templates/be_verwijderen.html
+++ b/templates/be_verwijderen.html
@@ -7,30 +7,49 @@
 <body>
 	{% extends 'base_be.html' %}
 	{% block content %}
-		<h1>Verwijderen records</h1>
-		<p>Let op! Veel data is gekoppeld aan andere types data. Het onoordeelkundig verwijderen van de verkeerde
-			data kan leiden tot een crash van de app.</p>
-		<p>dus:
-		<ul>
-			<li>Gast kan niet verwijderd als er nog boekingen van die gast zijn</li>
-			<li>Huis kan niet verwijderd worden als er nog boekingen zijn</li>
-			<li>Huis type kan niet verwijderd worden als er nog huizen van dat type zijn!</li>
-		</ul>
-		</p>
-		<table class="table table-striped">
-			<tr>
-				{% for item in data.keys() %}
-					<th scope="col">{{ item }}</th>
-				{% endfor %}
-			</tr>
-			{% for item in data %}
+		<div class="container">
+			<h1>Verwijderen records</h1>
+			<p>Let op! Veel data is gekoppeld aan andere types data. Het onoordeelkundig verwijderen van de verkeerde
+				data kan leiden tot een crash van de app.</p>
+			<div><p>dus:
+				<ul>
+					<li>Gast kan niet verwijderd als er nog boekingen van die gast zijn</li>
+					<li>Huis kan niet verwijderd worden als er nog boekingen zijn</li>
+					<li>Huis type kan niet verwijderd worden als er nog huizen van dat type zijn!</li>
+				</ul>
+				</p>
+			</div>
+			<h2>Overzicht {{ table }}</h2>
+			<table class="table table-striped">
 				<tr>
-					{% for i in range(item|length) %}
-						<td>{{ item[i] }}</td>
+					{% for item in data.keys() %}
+						<th scope="col">{{ item }}</th>
 					{% endfor %}
 				</tr>
-			{% endfor %}
-		</table>
+				{% for item in data %}
+					<tr>
+						{% for i in item %}
+							<td>{{ i }}</td>
+						{% endfor %}
+					</tr>
+				{% endfor %}
+			</table>
+			<div class="container">
+				<form method="POST">
+					{{ form.hidden_tag() }}
+					{% if table == 'boeking' %}
+						{{ form.boeking.label }}  {{ form.boeking() }}
+					{% elif table == 'gast' %}
+						{{ form.gast.label }} {{ form.gast() }}
+					{% elif table == 'huis' %}
+						{{ form.huis.label }} {{ form.huis() }}
+					{% elif table == 'types' %}
+						{{ form.types.label }} {{ form.types() }}
+					{% endif %}
+					{{ form.submit() }}
+				</form>
+			</div>
+		</div>
 	{% endblock %}
 </body>
 </html>
