alles functioneel, enkele database fk controles moeten nog. zie verder buffer1 for wishlist

--- a/templates/be_toevoegen.html
+++ b/templates/be_toevoegen.html
@@ -8,26 +8,77 @@
 <body>
 	{% block content %}
 		<div class="container">
+			<h1>Toevoegen {{ table }}</h1>
+			<p>lege dropdown menu's of ontbrekende items in dropdown menu's zullen eerst aangemaakt moeten worden, ga
+				naar 'insert'</p>
+			{# Toevoegen form #}
 			<form method="POST">
 				{{ form.hidden_tag() }}
 				{% if table == 'boeking' %}
-					{{ form.gast.label }} {{ form.gast() }}
-					{{ form.huis.label }} {{ form.huis() }}
-					{{ form.week.label }} {{ form.week() }}
-					{{ form.submit() }}
+					<table class="table table-striped table-responsive-md w-50">
+						<tr>
+							<th>{{ form.gast.label }}</th>
+							<td>{{ form.gast() }}</td>
+						</tr>
+						<tr>
+							<th>{{ form.huis.label }}</th>
+							<td>{{ form.huis() }}</td>
+						</tr>
+						<tr>
+							<th>{{ form.week.label }}</th>
+							<td>{{ form.week() }}</td>
+						</tr>
+						<tr>
+							<td colspan="2">{{ form.submit() }}</td>
+						</tr>
+					</table>
 				{% elif table == 'huis' %}
-					{{ form.naam.label }} {{ form.naam() }}
-					{{ form.huisType.label }} {{ form.huisType() }}
-					{{ form.submit() }}
+					<table class="table table-striped table-responsive-md w-50">
+						<tr>
+							<th>{{ form.naam.label }}</th>
+							<td>{{ form.naam() }}</td>
+						</tr>
+						<tr>
+							<th>{{ form.huisType.label }}</th>
+							<td>{{ form.huisType() }}</td>
+						</tr>
+						<tr>
+							<td colspan="2">{{ form.submit() }}</td>
+						</tr>
+					</table>
 				{% elif table == 'types' %}
-					{{ form.idType.label }} {{ form.idType() }}
-					{{ form.capaciteit.label }} {{ form.capaciteit() }}
-					{{ form.weekprijs.label }} {{ form.weekprijs() }}
-					{{ form.submit() }}
+					<table class="table table-striped table-responsive-md w-50">
+						<tr>
+							<th>{{ form.idType.label }}</th>
+							<td>{{ form.idType() }}</td>
+						</tr>
+						<tr>
+							<th>{{ form.capaciteit.label }}</th>
+							<td>{{ form.capaciteit() }}</td>
+						</tr>
+						<tr>
+							<th>{{ form.weekprijs.label }}</th>
+							<td>{{ form.weekprijs() }}</td>
+						</tr>
+						<tr>
+							<td colspan="2">{{ form.submit() }}</td>
+						</tr>
+					</table>
+
 				{% elif table == 'gast' %}
-					{{ form.email.label }} {{ form.email() }}
-					{{ form.wachtwoord.label }} {{ form.wachtwoord() }}
-					{{ form.submit() }}
+					<table class="table table-striped table-responsive-md w-50">
+						<tr>
+							<th>{{ form.email.label }}</th>
+							<td>{{ form.email() }}</td>
+						</tr>
+						<tr>
+							<th>{{ form.wachtwoord.label }}</th>
+							<td>{{ form.wachtwoord() }}</td>
+						</tr>
+						<tr>
+							<td colspan="2">{{ form.submit() }}</td>
+						</tr>
+					</table>
 				{% endif %}
 			</form>
 		</div>
