--- a/templates/boeken.html
+++ b/templates/boeken.html
@@ -5,11 +5,11 @@
 	<div class="container">
 		<div class="card mx-auto mt-4 mb-5 shadow-lg" style="width: 50%;">
 			<div class="card-header">
-				<h3 class="text-success text-center">Onze villa's van type {{ type }}</h3>
+				<h3 class="text-success text-center">Onze villa's van type {{ huistype }}</h3>
 			</div>
 			<img src="{{ imgsrc }}" class="card-img-top" alt="Villa">
 			<div class="card-body">
-				<h5 class="card-title text-success text-center">{{ type }}</h5>
+				<h5 class="card-title text-success text-center">{{ huistype }}</h5>
 				<p class="card-text">
 					{{ omschrijving }}
 				</p>
