--- a/templates/overzicht_huisjes.html
+++ b/templates/overzicht_huisjes.html
@@ -8,12 +8,25 @@
 	{% extends 'base.html' %}
 	{% block content %}
 		<div class="container">
-		<h1>Overzicht woningen</h1>
-			<ul>
+			<h1>Overzicht woningen</h1>
+			<table class="table table-striped">
+				<tr>
+					<th>Naam</th>
+					<th>Type</th>
+					<th>Cacaciteit</th>
+					<th>Weekprijs</th>
+					<th>boeken?</th>
+				</tr>
 				{% for huis in huisjes %}
-					<li class="list-unstyled">{{ huis.naam }} type: {{ huis.type }}</li>
+					<tr>
+						<td>{{ huis.Huis.naam }}</td>
+						<td>{{ huis.Huis.huistype }}</td>
+						<td>{{ huis.Types.capaciteit }}</td>
+						<td>{{ huis.Types.weekprijs }}</td>
+						<td><a href="{{ url_for('boeken',huistype=huis.Huis.huistype) }}"><button class="button btn-lg btn-success" >boek!</button></a></td>
+					</tr>
 				{% endfor %}
-			</ul>
+			</table>
 		</div>
 	{% endblock %}
 </body>
