--- a/templates/be_overzicht.html
+++ b/templates/be_overzicht.html
@@ -8,7 +8,7 @@
 	{% extends 'base_be.html' %}
 	{% block content %}
 		<div class="container">
-
+<h1>Overzicht {{ table }}</h1>
 			<table class="table table-striped">
 				<tr>
 					{% for item in data.keys() %}
