--- a/templates/info.html
+++ b/templates/info.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Informatie</title>
-</head>
-<body>
-	{% extends 'base.html' %}
+{% extends 'base.html' %}
+{% block title %}
+Pure luxe
+{% endblock %}
+
 	{% block content %}
 		<h1 class="text-success pt-6 mx-5">Welkom bij Bungalowpark "Zee & Duinen"!</h1>
 		<p class="mx-5 mt-2">Ons park is gelegen in een prachtig stukje Noord-Holland, in het hart van de duinen en aan
@@ -71,5 +68,3 @@
 			</div>
 		</div>
 	{% endblock %}
-</body>
-</html>
