--- a/templates/boeken.html
+++ b/templates/boeken.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
+{% block title %}
+	Boeken stap 1
+{% endblock %}
 
 {% block content %}
-
 	<div class="container">
 		<div class="card mx-auto mt-4 mb-5 shadow-lg" style="width: 50%;">
 			<div class="card-header">
@@ -34,5 +36,4 @@
 			</div>
 		</div>
 	</div>
-
 {% endblock %}
