--- a/templates/overzicht_huisjes.html
+++ b/templates/overzicht_huisjes.html
@@ -1,35 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Onze villa's</title>
-</head>
-<body>
-	{% extends 'base.html' %}
-	{% block content %}
-		<div class="container">
-			<h1>Overzicht woningen</h1>
-			<table class="table table-striped">
+{% extends 'base.html' %}
+{% block title %}
+	Alle woningen
+{% endblock %}
+{% block content %}
+	<div class="container">
+		<h1>Overzicht woningen</h1>
+		<table class="table table-striped">
+			<tr>
+				<th>Naam</th>
+				<th>Type</th>
+				<th>Cacaciteit</th>
+				<th>Weekprijs</th>
+				<th>boeken?</th>
+			</tr>
+			{% for huis in huisjes %}
 				<tr>
-					<th>Naam</th>
-					<th>Type</th>
-					<th>Cacaciteit</th>
-					<th>Weekprijs</th>
-					<th>boeken?</th>
+					<td>{{ huis.Huis.naam }}</td>
+					<td>{{ huis.Huis.huistype }}</td>
+					<td>{{ huis.Types.capaciteit }}</td>
+					<td>{{ "€%.2f"|format(huis.Types.weekprijs) }}</td>
+					<td><a href="{{ url_for('boeken',huistype=huis.Huis.huistype) }}">
+						<button class="button btn-lg btn-success">boek!</button>
+					</a></td>
 				</tr>
-				{% for huis in huisjes %}
-					<tr>
-						<td>{{ huis.Huis.naam }}</td>
-						<td>{{ huis.Huis.huistype }}</td>
-						<td>{{ huis.Types.capaciteit }}</td>
-						<td>{{ "€%.2f"|format(huis.Types.weekprijs) }}</td>
-						<td><a href="{{ url_for('boeken',huistype=huis.Huis.huistype) }}">
-							<button class="button btn-lg btn-success">boek!</button>
-						</a></td>
-					</tr>
-				{% endfor %}
-			</table>
-		</div>
-	{% endblock %}
-</body>
-</html>
+			{% endfor %}
+		</table>
+	</div>
+{% endblock %}
