voor branche (Blueprint)

--- a/zeeduin/frontend/templates/frontends/overzicht_huisjes.html
+++ b/zeeduin/frontend/templates/frontends/overzicht_huisjes.html
@@ -19,7 +19,7 @@
 					<td>{{ huis.Huis.huistype }}</td>
 					<td>{{ huis.Types.capaciteit }}</td>
 					<td>{{ "€%.2f"|format(huis.Types.weekprijs) }}</td>
-					<td><a href="{{ url_for('boeken',huistype=huis.Huis.huistype) }}">
+					<td><a href="{{ url_for('frontends.boeken',huistype=huis.Huis.huistype) }}">
 						<button class="button btn-lg btn-success">boek!</button>
 					</a></td>
 				</tr>
