--- a/zeeduin/templates/index.html
+++ b/zeeduin/templates/index.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 	<div class="card border-0">
-		<video src="/static/beach1920750.mp4" autoplay muted loop class="w-100"></video>
+		<video src="../static/beach1920750.mp4" autoplay muted loop class="w-100"></video>
 		<div class="card-img-overlay w-75 mx-auto flex-column justify-content-center">
 			<h1 class="card-title text-center text-success">Welkom bij "Zee & Duin"!</h1>
 			<p class="card-title display-6 text-center">Waar ontspanning, natuur en rust samenkomen..</p>
