--- a/zeeduin/backend/templates/backends/base_be.html
+++ b/zeeduin/backend/templates/backends/base_be.html
@@ -19,7 +19,7 @@
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item">
 						<a class="nav-link active" aria-current="page" href="{{ url_for('index') }}"><img
-								src="/static/mini_logo.png" width="60" alt="logo"></a>
+								src="../../../static/mini_logo.png" width="60" alt="logo"></a>
 					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -28,14 +28,14 @@
 						</a>
 						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<li><a class="dropdown-item"
-								   href="{{ url_for('be_toevoegen', table='boeking') }}">Insert</a></li>
+								   href="{{ url_for('backends.be_toevoegen', table='boeking') }}">Insert</a></li>
 							<li><a class="dropdown-item"
-								   href="{{ url_for('be_verwijderen', table='boeking') }}">Delete</a></li>
+								   href="{{ url_for('backends.be_verwijderen', table='boeking') }}">Delete</a></li>
 							<li>
 								<hr class="dropdown-divider">
 							</li>
 							<li><a class="dropdown-item"
-								   href="{{ url_for('be_overzicht', table='boeking') }}">Overzicht</a></li>
+								   href="{{ url_for('backends.be_overzicht', table='boeking') }}">Overzicht</a></li>
 						</ul>
 					</li>
 					<li class="nav-item dropdown">
@@ -45,14 +45,14 @@
 						</a>
 						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<li><a class="dropdown-item"
-								   href="{{ url_for('be_toevoegen', table='gast') }}">Insert</a></li>
-							<li><a class="dropdown-item" href="{{ url_for('be_verwijderen', table='gast') }}">Delete</a>
+								   href="{{ url_for('backends.be_toevoegen', table='gast') }}">Insert</a></li>
+							<li><a class="dropdown-item" href="{{ url_for('backends.be_verwijderen', table='gast') }}">Delete</a>
 							</li>
 							<li>
 								<hr class="dropdown-divider">
 							</li>
 							<li><a class="dropdown-item"
-								   href="{{ url_for('be_overzicht', table='gast') }}">Overzicht</a></li>
+								   href="{{ url_for('backends.be_overzicht', table='gast') }}">Overzicht</a></li>
 						</ul>
 					</li>
 					<li class="nav-item dropdown">
@@ -61,15 +61,15 @@
 							Woningen
 						</a>
 						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<li><a class="dropdown-item" href="{{ url_for('be_toevoegen', table='huis') }}">Insert</a>
+							<li><a class="dropdown-item" href="{{ url_for('backends.be_toevoegen', table='huis') }}">Insert</a>
 							</li>
-							<li><a class="dropdown-item" href="{{ url_for('be_verwijderen', table='huis') }}">Delete</a>
+							<li><a class="dropdown-item" href="{{ url_for('backends.be_verwijderen', table='huis') }}">Delete</a>
 							</li>
 							<li>
 								<hr class="dropdown-divider">
 							</li>
 							<li><a class="dropdown-item"
-								   href="{{ url_for('be_overzicht', table='huis') }}">Overzicht</a></li>
+								   href="{{ url_for('backends.be_overzicht', table='huis') }}">Overzicht</a></li>
 						</ul>
 					</li>
 					<li class="nav-item dropdown">
@@ -78,15 +78,15 @@
 							Woning-types
 						</a>
 						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<li><a class="dropdown-item" href="{{ url_for('be_toevoegen', table='types') }}">Insert</a>
+							<li><a class="dropdown-item" href="{{ url_for('backends.be_toevoegen', table='types') }}">Insert</a>
 							</li>
 							<li><a class="dropdown-item"
-								   href="{{ url_for('be_verwijderen', table='types') }}">Delete</a></li>
+								   href="{{ url_for('backends.be_verwijderen', table='types') }}">Delete</a></li>
 							<li>
 								<hr class="dropdown-divider">
 							</li>
 							<li><a class="dropdown-item"
-								   href="{{ url_for('be_overzicht', table='types') }}">Overzicht</a></li>
+								   href="{{ url_for('backends.be_overzicht', table='types') }}">Overzicht</a></li>
 						</ul>
 					</li>
 				</ul>
