--- a/zeeduin/frontend/templates/frontends/base.html
+++ b/zeeduin/frontend/templates/frontends/base.html
@@ -6,13 +6,13 @@
 	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link rel="stylesheet" href="../static/my_styles.css">
+	<link rel="stylesheet" href="/static/my_styles.css">
 </head>
 <body>
 	{#	nav bar#}
 	<nav class="navbar navbar-light bg-light sticky-top">
 		<div class="container d-flex justify-content-start mx-5">
-			<a class="navbar-brand" href="{{ url_for('index') }}"><img src="../static/mini_logo.png"
+			<a class="navbar-brand" href="{{ url_for('index') }}"><img src="~/static/mini_logo.png"
 																	   width="60"
 																	   alt="Home"></a>
 			<a class="navbar-brand" href="{{ url_for('frontends.info') }}">Info & boeken</a>
