--- a/zeeduin/templates/base.html
+++ b/zeeduin/templates/base.html
@@ -12,7 +12,7 @@
 	{#	nav bar#}
 	<nav class="navbar navbar-light bg-light sticky-top">
 		<div class="container d-flex justify-content-start mx-5">
-			<a class="navbar-brand" href="{{ url_for('index') }}"><img src="../static/mini_logo.png"
+			<a class="navbar-brand" href="{{ url_for('index') }}"><img src="/static/mini_logo.png"
 																	   width="60"
 																	   alt="Home"></a>
 			<a class="navbar-brand" href="{{ url_for('frontends.info') }}">Info & boeken</a>
