links in menu login (office en boeking) tabel staf toegevoegd aan Model en database

--- a/zeeduin/templates/base.html
+++ b/zeeduin/templates/base.html
@@ -10,14 +10,15 @@
 </head>
 <body>
 	{#	nav bar#}
-	<nav class="navbar navbar-light bg-light sticky-top">
-		<div class="container d-flex justify-content-start mx-5">
+	<nav class="navbar navbar-light bg-light sticky-top justify-content-center">
+		<div class="container d-flex justify-content-start">
 			<a class="navbar-brand" href="{{ url_for('index') }}"><img src="/static/mini_logo.png"
 																	   width="60"
 																	   alt="Home"></a>
 			<a class="navbar-brand" href="{{ url_for('frontends.info') }}">Info & boeken</a>
 			<a class="navbar-brand" href="{{ url_for('frontends.huisjes') }}">Overzicht woningen</a>
-			<a class="navbar-brand" href="{{ url_for('backends.back_home') }}">Login</a>
+			<a class="navbar-brand" href="{{ url_for('backends.back_home') }}">Mijn boekingen</a>
+			<a class="navbar-brand text-muted ms-auto" href="#">Office</a>
 		</div>
 	</nav>
 	{% block content %}
