--- a/zeeduin/templates/base_be.html
+++ b/zeeduin/templates/base_be.html
@@ -8,7 +8,7 @@
 		  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light px-5">
 		<div class="container-fluid">
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -88,6 +88,9 @@
 							<li><a class="dropdown-item"
 								   href="{{ url_for('backends.be_overzicht', table='types') }}">Overzicht</a></li>
 						</ul>
+					</li>
+					<li class="nav-item ms-auto">
+						<a class="nav-link" href="#">Logout</a>
 					</li>
 				</ul>
 			</div>
